objects/PS_Group__c.object
<CustomObject>
    <fields>
        <fullName>CollaborationGroup_Id__c</fullName>
        <description>The collaboration group id this records is associated with.</description>
        <label>CollaborationGroup Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Curated_Topic_Name__c</fullName>
        <label>Curated Topic Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Name__c</fullName>
        <description>The CollaborationGroup name</description>
        <label>Group Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PS_Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PS Site</label>
        <referenceTo>PS_Site__c</referenceTo>
        <relationshipLabel>PS Groups</relationshipLabel>
        <relationshipName>PS_Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Show_Curated_Articles__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Show Curated Articles</label>
        <type>Checkbox</type>
    </fields>
    <label>PS Group</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PS Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>